--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --font-family: tahoma, serif;
+  --primary-color: #aaa;
+  --secondary-color: #ddd;
+  --bright-color: #fff;
+  --dark-color: #000;
+  --background-color: rgba(255, 255, 255, 0.25);
+  --border-color: rgba(255, 255, 255, 0.1);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font: 12px var(--font-family);
+}
+
+body {
+  padding: 60px 0 120px;
+  color: var(--primary-color);
+  background-color: var(--dark-color);
+}
+
+main {
+  height: calc(100vh - 180px);
+  max-width: 1000px;
+  padding: 10px;
+  margin: auto;
+}
+
+button {
+  background: none;
+  border: none;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+@media only screen and (min-width: 768px) {
+  * {
+    font-size: 16px;
+  }
 }
